<resources>
    <string name="app_name">Modal</string>

    <string name="descricao">Conta mais um pouquinho pra gente, o que você está vendendo?</string>
    <string name="item1">Roupas</string>
    <string name="item2">Calçados</string>
    <string name="item3">Acessórios</string>

    <string-array name="item1">
        <item>Camisa</item>
        <item>Calça</item>
        <item>Vestido</item>
    </string-array>

    <string-array name="item2">
        <item>Tênis</item>
        <item>Sapato</item>
        <item>Sandalha</item>
    </string-array>

    <string-array name="item3">
        <item>Bolsa</item>
        <item>Brinco</item>
        <item>Colar</item>
    </string-array>

    <string name="titulo_cor">Cor do produto</string>

    <string name="titulo_pagou">Quanto você pagou</string>

    <string name="tip_pagou">Queremos mostrar para todo mundo como na sua mão é muito mais barato. Não lembra o preço? Sem problemas, uma estimativa é o bastante.</string>

    <string name="botao_submit">É isso!</string>


    <string-array name="tamanho1">
        <item>P</item>
        <item>M</item>
        <item>G</item>
        <item>GG</item>
    </string-array>

    <string-array name="tamanho2">
        <item>32</item>
        <item>34</item>
        <item>36</item>
        <item>38</item>
        <item>40</item>
        <item>42</item>
        <item>44</item>
        <item>48</item>
        <item>50</item>
        <item>52</item>
        <item>54</item>
        <item>56</item>
    </string-array>

    <string-array name="tamanho3">
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>31</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>41</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>51</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="tamanho4">
        <item>unidade</item>
        <item>par</item>
    </string-array>

    <string-array name="sexo">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Unissex</item>
    </string-array>

</resources>
